added dependencies endpoint to api still needs cleanup!
